# googly-eyes

./: .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  LICENSE  README.md  app.py  docker-compose.yml  goofy-eyes.code-workspace  googly-eyes.code-workspace  pyproject.toml  save_model.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml  devcontainer.yml  pr.yml
common/: drawing.py  face.py  googlify.py  image.py
dashboard/: Dockerfile  app.py  pyproject.toml
lambda/: Dockerfile  predict.py  pyproject.toml
retinaface/: README.md  RetinaFace.py  convert_model.py  detect.py  model.py  retinaface.onnx  retinaface.onnx.data  retinaface.tflite  save_model.py
retinaface/commons/: postprocess.py  preprocess.py
retinaface/pytorch/models/: retinaface.py
retinaface/pytorch/utils/: box_utils.py
server/: Dockerfile  app.py  drawing.py  pyproject.toml  test_predict.py
tests/: conftest.py  test_image.py  test_lambda.py  test_model.py  test_postprocess.py  test_preprocess.py  test_smoke.py
