[tool.poetry]
name = "googly-eyes-dashboard"
version = "0.1.0"
description = ""
authors = ["Alex Haslam <alexhaslam12@gmail.com>"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.11"
numpy  = "1.23.5"
streamlit = "1.30.0"
pillow = "~10"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
