[tool.poetry]
name = "googly-eyes-server"
version = "0.1.0"
description = ""
authors = ["Alex Haslam <alexhaslam12@gmail.com>"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "~1.26"
onnxruntime = "^1.17"
pillow = "~12"
awslambdaric = "^2.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
