[tool.poetry]
name = "googly-eyes-server"
version = "0.1.0"
description = ""
authors = ["Alex Haslam <alexhaslam12@gmail.com>"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "1.23.5"
tflite-runtime = "~2.14.0"
pillow = "~10"
flask = "^3.0.1"
waitress = "^3.0.0"
hupper = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
