[tool.poetry]
name = "googly-eyes-server"
version = "0.1.0"
description = ""
authors = ["Alex Haslam <alexhaslam12@gmail.com>"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "~1.26"
onnxruntime = "^1.17"
pillow = "~12"
flask = "^3.1.3"
waitress = "^3.0.1"
hupper = "^1.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
